--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material/react-material-icon": "^0.15.0",
+    "@suankularb-components/css": "^3.2.2",
+    "@suankularb-components/react": "^3.2.2",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.3.1",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.16.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
+    "sass": "^1.66.1",
     "tailwindcss": "3.3.3"
   }
 }
