--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@types/node": "20.8.0",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
-    "antd": "^5.9.4",
+    "antd": "^5.10.2",
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
-    "next": "^13.5.6",
-    "postcss": "8.4.31",
+    "next": "^14.0.0",
+    "postcss": "^8.4.31",
+    "postcss-antd-fixes": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
