--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "eslint-config-next": "13.5.3",
     "next": "^14.0.0",
     "postcss": "^8.4.31",
-    "postcss-antd-fixes": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "postcss-antd-fixes": "^0.2.0"
   }
 }
