--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
+    "html-react-parser": "^5.0.6",
     "next": "^14.0.0",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
