--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@ant-design/cssinjs": "^1.17.0",
     "@ant-design/icons": "^5.2.6",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@types/node": "20.8.0",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
@@ -27,6 +30,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
     "postcss-antd-fixes": "^0.2.0"
   }
 }
