--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-double-marquee": "^1.1.0",
+    "react-fast-marquee": "^1.6.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
