--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@types/node": "20.8.0",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
+    "@vercel/analytics": "^1.1.1",
     "antd": "^5.10.2",
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "html-react-parser": "^5.0.6",
-    "next": "^14.0.2",
+    "next": "^14.0.4",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
