--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
     "@vercel/analytics": "^1.1.1",
+    "@vercel/speed-insights": "^1.0.1",
     "antd": "^5.10.2",
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
